--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -5,4 +5,9 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
+}
+
+* {
+  box-sizing: border-box;
 }
